# zipgen

./: README.md  pyproject.toml  zipgen-0.1.1-py3-none-any.whl
examples/: async.py  builder_async.py  builder_sync.py  stream_async.py  stream_sync.py  sync.py
src/tests/: test_async.py  test_sync.py
src/zipgen/: __main__.py  build.py  compress.py  constant.py  convert.py  pack.py
